<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Expenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="locate">Hello world!</string>
    <string name="title_item_detail">Record Detail</string>
    <!-- General Words -->
    <string name="income">income</string>
    <string name="expenses">expenses</string>
    <string name="total">current balance</string>
    
    <!-- Preferences -->
    <string name="pref_category_general">General Settings</string>
    <string name="pref_category_sync">Synchronization Settings</string>
    <string name="pref_category_sync_key">sync_enabled</string>
    <string name="pref_category_sync_summary">enable sync</string>
    <string name="pref_category_sync_def">true</string>
    
     <string name="pref_category_sync_google">Google</string>
    <string name="pref_category_sync_google_key">sync_google_enabled</string>
    <string name="pref_category_sync_google_summary">Sync with google.</string>
    <string name="pref_category_sync_google_def">true</string>

    <!-- Activity Titles  -->
	<string name="title_activity_graphs">Graphs</string>
	<string name="title_activity_preferences">Preferences</string>
	<string name="title_activity_about">About</string>
	
    <!-- Activity About -->
    <string name="activity_about_version">Version</string>
    <string name="about_tex">This Application is a slim expenses tracker. It aims to be as simple as possible to provide a fast tracking.\nDeveloper: Christian Zöller\nLibraries: ActionBarSherlock</string>
    
    <!-- Buttons -->
    <string name="button_filter">Filter</string>
    
    <!-- Graph Tabs -->
    
    <string name="graph_tab_overview">Overview</string>
    <string name="graph_tab_month">Month</string>
    <string name="graph_tab_categories">Categories</string>
    <string name="graph_tab_flow">Flow</string>
    
    <string name="loading">Loading..</string>
    <string name="title_activity_item_insert">Insert Record</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_grid">Grid</string>
    <string name="record_detail_save">Save</string>
    <string name="record_detail_editDate">Edit Date</string>
    <string name="record_detail_bookingTypeDesc">Booking Type</string>
    <string name="record_detail_bookingTypeOn">Expense</string>
    <string name="record_detail_bookingTypeOff">Income</string>
    <string name="record_detail_payStateDesc">Pay State</string>
    <string name="record_detail_payStateOn">paid</string>
    <string name="record_detail_payStateOff">not paid</string>
    <string name="dialog_category_delete">Delete</string>
    <string name="dialog_category_title">Title</string>
    <string name="dialog_category_PositiveButton">Confirm</string>
    <string name="dialog_category_NegativeButton">Abort</string>
    <string name="dialog_category_NeutralButton">As new Category</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
   
    <string name="ocr">Scan bill</string>

</resources>